# spy-options-bridge

./: .cursorrules  .env.example  .gitignore  AGENTS.md  COMMAND-CENTER-WHATS-NEW.txt  MARKET-OPEN-THU.txt  MARKET-RUN-LIVE.txt  PRE-OPEN-STANDBY.txt  PUSH-HELP.md  README.md  WHAT-YOU-DO-NOW.txt  YOUR-STEPS-UNTIL-SUCCESS.txt  _qa_dump.py  email_alerts.py  main.py  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  config.py  main.py  models.py  notifications.py  risk_management.py  router.py  spread_builder.py
config/: committee.yaml  operator_protocol.yaml  preopen.yaml  scenario_lab.yaml
docs/: ACTIVE-PLAN.md  COMMAND-CENTER-2.0.md  COMMAND-CENTER.md  CURSOR-HANDOFF.md  CURSOR-PLAN-FIRST.md  EMAIL-TEAM-PROTOCOL.md  FILL-AND-PNL-AUDIT.md  OPERATOR-PROTOCOL.md  RENDER-KEEPALIVE.md  RENDER-MEMORY.md  WORKFORCE-ARCHITECTURE.md
launchers/: ARM-FOR-OPEN-ONE-CLICK.bat  ARM-SCHEDULE-BURST-931.ps1  BRIDGE-PIPE-TEST.bat  CHECK-EMAIL-APPROVALS.bat  CLEAR-GUI-LOCK.bat  DEDUPE-SPY-WORKERS.bat  DO-NOW-LAUNCH.bat  EOD-SESSION-REPORT.bat  GO-TOMORROW-ONE-CLICK.bat  HANDOFF-TO-CURSOR.bat  LIVE-SESSION-GUARDIAN-ONCE.bat  LIVE-SESSION-GUARDIAN.bat  MONITOR-AND-READY.bat  OPERATOR-QUICK-START.txt  PAPER-PNL-AUDIT.bat  POWER-AC-ON-FOR-MARKET.bat  PUSH-PAPER-FILL-TEST.bat  SPREAD-ACTIVITY-DIGEST.bat  SPY-LIVE-COMMAND-CENTER.bat  START-GUARDIAN.bat  START-LOCAL-BRIDGE.bat  START-STX-WATCHER.bat  STOP-BLUE-FLASH.bat  STRESS-PIPE.bat  STX-KILL.bat  WATCH-PORTFOLIO-ACTIVITIES.bat  _do_now_send_approval.py
scripts/: _alpaca_smoke.py  _desktop_shortcut_once.ps1  cc_launcher.py  (+54 more)
(+63 files in other folders)
